// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile Page Renders the edit profile page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="h-full overflow-y-scroll bg-light-bg dark:bg-dark-frame-bg"
      >
        <div
          class="bg-cover bg-no-repeat bg-defaultCover bg-center bg-fixed h-[28vh] md:h-[26vh] flex flex-row text-center  align-center items-center"
          style="background-image: url(https://images.unsplash.com/photo-1483168527879-c66136b56105?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3016&q=80);"
        >
          <img
            alt="profile-avatar"
            class="relative w-20 h-20 m-4 ml-6 rounded-full md:w-28 md:h-28 md:ml-20 mt-36 md:mt-12"
            src="[object Object]"
          />
          <div
            class="z-0 flex items-center justify-center h-full mr-auto -ml-10 bg-grey-lighter md:-ml-12 mt-36 md:mt-20"
          >
            <div
              role="button"
            >
              <label
                class="flex flex-row text-center ml-auto mr-4 rounded-lg bg-primary text-white hover:bg-[#7a5edc] focus:outline-none p-1"
              >
                <svg
                  aria-hidden="true"
                  class="w-5 mt-0 mr-1 md:w-3 dark:text-dark-text-fill"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M17.414 2.586a2 2 0 00-2.828 0L7 10.172V13h2.828l7.586-7.586a2 2 0 000-2.828z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M2 6a2 2 0 012-2h4a1 1 0 010 2H4v10h10v-4a1 1 0 112 0v4a2 2 0 01-2 2H4a2 2 0 01-2-2V6z"
                    fill-rule="evenodd"
                  />
                </svg>
                <span
                  class="text-lg md:text-sm dark:text-dark-text-fill"
                >
                  <span
                    class="hidden md:block"
                  >
                    Edit
                  </span>
                </span>
                <input
                  class="hidden"
                  data-testid="upload-image"
                  type="file"
                />
              </label>
            </div>
          </div>
          <div
            class="flex items-center justify-center w-full h-screen mt-24 ml-auto bg-grey-lighter"
          >
            <label
              class="flex flex-row text-center ml-auto mr-4 rounded-lg bg-primary text-white hover:bg-[#7a5edc] focus:outline-none p-2"
            >
              <svg
                aria-hidden="true"
                class="w-6 mt-0 mr-1 dark:text-dark-text-fill"
                fill="none"
                stroke="currentColor"
                stroke-width="2"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3 9a2 2 0 012-2h.93a2 2 0 001.664-.89l.812-1.22A2 2 0 0110.07 4h3.86a2 2 0 011.664.89l.812 1.22A2 2 0 0018.07 7H19a2 2 0 012 2v9a2 2 0 01-2 2H5a2 2 0 01-2-2V9z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
                <path
                  d="M15 13a3 3 0 11-6 0 3 3 0 016 0z"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                />
              </svg>
              <input
                class="hidden"
                data-testid="upload-cover"
                type="file"
              />
            </label>
          </div>
        </div>
        <div
          class="flex flex-wrap"
        >
          <div
            class="lg:w-[25vw] mt-3"
          >
            <ul
              class="flex flex-row flex-wrap pt-3 pb-4 mb-0 text-black list-none dark:text-dark-text-fill"
              role="tablist"
            >
              <li
                class="flex-auto mr-2 -mb-px text-center last:mr-0"
                role="button"
              >
                <span
                  class="block px-5 py-3 text-xs font-bold leading-normal uppercase border-b-4 rounded shadow-sm  border-b-primary  "
                >
                  Editing Profile
                </span>
              </li>
              <li
                class="flex-auto mr-2 -mb-px text-center last:mr-0"
                role="button"
              >
                <span
                  class="block px-5 py-3 text-xs font-bold leading-normal uppercase border-b-4 rounded shadow-sm  false  "
                >
                  Upload Resume
                </span>
              </li>
            </ul>
          </div>
        </div>
        <div
          class="border bg-indigo-100 dark:border-dark-bg  dark:bg-dark-bg dark:text-white w-full h-fit my-6 rounded-lg"
        >
          <div
            class="px-4"
          >
            <button
              class="btn default md text-center mb-4 rounded-lg bg-primary text-white hover:bg-[#1eaad6] focus:outline-none p-1 mt-4"
              type="button"
            >
               
              <a
                class="flex flex-row"
                href="/profile"
              >
                <svg
                  aria-hidden="true"
                  class="w-6 p-1 mr-1 md:mr-2 dark:text-dark-text-fill"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M9.707 16.707a1 1 0 01-1.414 0l-6-6a1 1 0 010-1.414l6-6a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l4.293 4.293a1 1 0 010 1.414z"
                    fill-rule="evenodd"
                  />
                </svg>
                Back to Profile
              </a>
            </button>
            <form
              class="grid grid-cols-1 gap-4 mt-12 md:grid-cols-2"
            >
              <div
                class="flex flex-col items-start justify-start"
              >
                <label
                  class="mb-2 font-semibold"
                  for="first-name"
                >
                  First Name
                </label>
                <input
                  class="rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary focus:z-10 sm:text-sm  dark:text-dark-text-fill dark:border-white  dark:bg-dark-bg"
                  id="firstname"
                  name="firstName"
                  placeholder="Enter your First Name"
                  type="text"
                />
                <div
                  class=""
                >
                  <small
                    class="text-red-600"
                  />
                </div>
              </div>
              <div
                class="flex flex-col items-start justify-start"
              >
                <label
                  class="mb-2 font-semibold"
                  for="lastname"
                >
                  Last Name
                </label>
                <input
                  class="rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary focus:z-10 sm:text-sm  dark:text-dark-text-fill dark:border-white  dark:bg-dark-bg"
                  id="lastname"
                  name="lastName"
                  placeholder="Enter your Last Name"
                  type="text"
                />
                <div
                  class=""
                >
                  <small
                    class="text-red-600"
                  />
                </div>
              </div>
              <div
                class="flex flex-col items-start justify-start"
              >
                <label
                  class="mb-2 font-semibold"
                  for="address"
                >
                  Address
                </label>
                <input
                  class="rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary focus:z-10 sm:text-sm  dark:text-dark-text-fill dark:border-white  dark:bg-dark-bg"
                  id="address"
                  name="address"
                  placeholder="Enter your address"
                  type="text"
                />
                <div
                  class=""
                >
                  <small
                    class="text-red-600"
                  />
                </div>
              </div>
              <div
                class="flex flex-col items-start justify-start"
              >
                <label
                  class="mb-2 font-semibold"
                  for="city"
                >
                  City
                </label>
                <input
                  class="rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary focus:z-10 sm:text-sm  dark:text-dark-text-fill dark:border-white  dark:bg-dark-bg"
                  id="city"
                  name="city"
                  placeholder="Enter the City where you live"
                  type="text"
                />
                <div
                  class=""
                >
                  <small
                    class="text-red-600"
                  />
                </div>
              </div>
              <div
                class="flex flex-col items-start justify-start"
              >
                <label
                  class="mb-2 font-semibold"
                  for="telephone"
                >
                  Telephone
                </label>
                <input
                  class="rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary focus:z-10 sm:text-sm  dark:text-dark-text-fill dark:border-white  dark:bg-dark-bg"
                  id="telephone"
                  name="phoneNumber"
                  placeholder="Your Telephone Number"
                  type="phone"
                />
                <div
                  class=""
                >
                  <small
                    class="text-red-600"
                  />
                </div>
              </div>
              <div
                class="flex flex-col items-start justify-start"
              >
                <label
                  class="mb-2 font-semibold"
                  for="github-username"
                >
                  Github Username
                </label>
                <input
                  class="rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary focus:z-10 sm:text-sm  dark:text-dark-text-fill dark:border-white  dark:bg-dark-bg"
                  id="github-username"
                  name="githubUsername"
                  placeholder="Your Github Username"
                  type="text"
                />
                <div
                  class=""
                >
                  <small
                    class="text-red-600"
                  />
                </div>
              </div>
              <div
                class="flex flex-col items-start justify-start mt-auto"
              >
                <label
                  class="mb-2 font-semibold"
                  for="Country"
                >
                  Country
                </label>
                <div
                  class="w-full"
                >
                  <div
                    data-testid="countries"
                  >
                    <div
                      class="relative"
                    >
                      <button
                        aria-expanded="true"
                        aria-haspopup="listbox"
                        aria-labelledby="listbox-label"
                        class="bg-white  dark:bg-dark-bg relative w-full border border-gray-300  rounded-md shadow-sm pl-2 pr-1 py-2 text-left cursor-default focus:outline-none focus:ring-1  focus:ring-primary focus:border-primary focus:z-10 sm:text-sm  dark:text-dark-text-fill dark:border-white  darksm:text-sm"
                        data-testid="country-selector-button"
                        type="button"
                      >
                        <span
                          class="truncate flex items-center"
                          data-testid="country-selector-title"
                        >
                          <img
                            alt="AD"
                            class="inline mr-2 h-4 rounded-sm"
                            data-testid="country-selector-flag"
                            src="https://purecatamphetamine.github.io/country-flag-icons/3x2/AD.svg"
                          />
                          Andorra
                        </span>
                        <span
                          class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
                        >
                          <svg
                            aria-hidden="true"
                            class="h-5 w-5 text-gray-400 "
                            fill="currentColor"
                            viewBox="0 0 20 20"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              clip-rule="evenodd"
                              d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-col items-start justify-start md:col-span-2"
              >
                <label
                  class="mb-2 font-semibold"
                  for="Biography"
                >
                  Biography
                </label>
                <textarea
                  class="w-full p-2 border rounded-md dark:bg-dark-bg focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary focus:z-10 sm:text-sm dark:text-dark-text-fill dark:border-white"
                  cols="20"
                  id=""
                  name="biography"
                  placeholder="Add your biography here"
                  rows="5"
                />
              </div>
              <button
                class="group md:px-4 relative my-4 md:w-fit sm:w-full flex flex-row justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-primary hover:bg-[#1280a3] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary dark:focus:ring-secondary sm:mx-0"
                type="submit"
              >
                Update Profile
              </button>
            </form>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="h-full overflow-y-scroll bg-light-bg dark:bg-dark-frame-bg"
    >
      <div
        class="bg-cover bg-no-repeat bg-defaultCover bg-center bg-fixed h-[28vh] md:h-[26vh] flex flex-row text-center  align-center items-center"
        style="background-image: url(https://images.unsplash.com/photo-1483168527879-c66136b56105?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3016&q=80);"
      >
        <img
          alt="profile-avatar"
          class="relative w-20 h-20 m-4 ml-6 rounded-full md:w-28 md:h-28 md:ml-20 mt-36 md:mt-12"
          src="[object Object]"
        />
        <div
          class="z-0 flex items-center justify-center h-full mr-auto -ml-10 bg-grey-lighter md:-ml-12 mt-36 md:mt-20"
        >
          <div
            role="button"
          >
            <label
              class="flex flex-row text-center ml-auto mr-4 rounded-lg bg-primary text-white hover:bg-[#7a5edc] focus:outline-none p-1"
            >
              <svg
                aria-hidden="true"
                class="w-5 mt-0 mr-1 md:w-3 dark:text-dark-text-fill"
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.414 2.586a2 2 0 00-2.828 0L7 10.172V13h2.828l7.586-7.586a2 2 0 000-2.828z"
                />
                <path
                  clip-rule="evenodd"
                  d="M2 6a2 2 0 012-2h4a1 1 0 010 2H4v10h10v-4a1 1 0 112 0v4a2 2 0 01-2 2H4a2 2 0 01-2-2V6z"
                  fill-rule="evenodd"
                />
              </svg>
              <span
                class="text-lg md:text-sm dark:text-dark-text-fill"
              >
                <span
                  class="hidden md:block"
                >
                  Edit
                </span>
              </span>
              <input
                class="hidden"
                data-testid="upload-image"
                type="file"
              />
            </label>
          </div>
        </div>
        <div
          class="flex items-center justify-center w-full h-screen mt-24 ml-auto bg-grey-lighter"
        >
          <label
            class="flex flex-row text-center ml-auto mr-4 rounded-lg bg-primary text-white hover:bg-[#7a5edc] focus:outline-none p-2"
          >
            <svg
              aria-hidden="true"
              class="w-6 mt-0 mr-1 dark:text-dark-text-fill"
              fill="none"
              stroke="currentColor"
              stroke-width="2"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M3 9a2 2 0 012-2h.93a2 2 0 001.664-.89l.812-1.22A2 2 0 0110.07 4h3.86a2 2 0 011.664.89l.812 1.22A2 2 0 0018.07 7H19a2 2 0 012 2v9a2 2 0 01-2 2H5a2 2 0 01-2-2V9z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
              <path
                d="M15 13a3 3 0 11-6 0 3 3 0 016 0z"
                stroke-linecap="round"
                stroke-linejoin="round"
              />
            </svg>
            <input
              class="hidden"
              data-testid="upload-cover"
              type="file"
            />
          </label>
        </div>
      </div>
      <div
        class="flex flex-wrap"
      >
        <div
          class="lg:w-[25vw] mt-3"
        >
          <ul
            class="flex flex-row flex-wrap pt-3 pb-4 mb-0 text-black list-none dark:text-dark-text-fill"
            role="tablist"
          >
            <li
              class="flex-auto mr-2 -mb-px text-center last:mr-0"
              role="button"
            >
              <span
                class="block px-5 py-3 text-xs font-bold leading-normal uppercase border-b-4 rounded shadow-sm  border-b-primary  "
              >
                Editing Profile
              </span>
            </li>
            <li
              class="flex-auto mr-2 -mb-px text-center last:mr-0"
              role="button"
            >
              <span
                class="block px-5 py-3 text-xs font-bold leading-normal uppercase border-b-4 rounded shadow-sm  false  "
              >
                Upload Resume
              </span>
            </li>
          </ul>
        </div>
      </div>
      <div
        class="border bg-indigo-100 dark:border-dark-bg  dark:bg-dark-bg dark:text-white w-full h-fit my-6 rounded-lg"
      >
        <div
          class="px-4"
        >
          <button
            class="btn default md text-center mb-4 rounded-lg bg-primary text-white hover:bg-[#1eaad6] focus:outline-none p-1 mt-4"
            type="button"
          >
             
            <a
              class="flex flex-row"
              href="/profile"
            >
              <svg
                aria-hidden="true"
                class="w-6 p-1 mr-1 md:mr-2 dark:text-dark-text-fill"
                fill="currentColor"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M9.707 16.707a1 1 0 01-1.414 0l-6-6a1 1 0 010-1.414l6-6a1 1 0 011.414 1.414L5.414 9H17a1 1 0 110 2H5.414l4.293 4.293a1 1 0 010 1.414z"
                  fill-rule="evenodd"
                />
              </svg>
              Back to Profile
            </a>
          </button>
          <form
            class="grid grid-cols-1 gap-4 mt-12 md:grid-cols-2"
          >
            <div
              class="flex flex-col items-start justify-start"
            >
              <label
                class="mb-2 font-semibold"
                for="first-name"
              >
                First Name
              </label>
              <input
                class="rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary focus:z-10 sm:text-sm  dark:text-dark-text-fill dark:border-white  dark:bg-dark-bg"
                id="firstname"
                name="firstName"
                placeholder="Enter your First Name"
                type="text"
              />
              <div
                class=""
              >
                <small
                  class="text-red-600"
                />
              </div>
            </div>
            <div
              class="flex flex-col items-start justify-start"
            >
              <label
                class="mb-2 font-semibold"
                for="lastname"
              >
                Last Name
              </label>
              <input
                class="rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary focus:z-10 sm:text-sm  dark:text-dark-text-fill dark:border-white  dark:bg-dark-bg"
                id="lastname"
                name="lastName"
                placeholder="Enter your Last Name"
                type="text"
              />
              <div
                class=""
              >
                <small
                  class="text-red-600"
                />
              </div>
            </div>
            <div
              class="flex flex-col items-start justify-start"
            >
              <label
                class="mb-2 font-semibold"
                for="address"
              >
                Address
              </label>
              <input
                class="rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary focus:z-10 sm:text-sm  dark:text-dark-text-fill dark:border-white  dark:bg-dark-bg"
                id="address"
                name="address"
                placeholder="Enter your address"
                type="text"
              />
              <div
                class=""
              >
                <small
                  class="text-red-600"
                />
              </div>
            </div>
            <div
              class="flex flex-col items-start justify-start"
            >
              <label
                class="mb-2 font-semibold"
                for="city"
              >
                City
              </label>
              <input
                class="rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary focus:z-10 sm:text-sm  dark:text-dark-text-fill dark:border-white  dark:bg-dark-bg"
                id="city"
                name="city"
                placeholder="Enter the City where you live"
                type="text"
              />
              <div
                class=""
              >
                <small
                  class="text-red-600"
                />
              </div>
            </div>
            <div
              class="flex flex-col items-start justify-start"
            >
              <label
                class="mb-2 font-semibold"
                for="telephone"
              >
                Telephone
              </label>
              <input
                class="rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary focus:z-10 sm:text-sm  dark:text-dark-text-fill dark:border-white  dark:bg-dark-bg"
                id="telephone"
                name="phoneNumber"
                placeholder="Your Telephone Number"
                type="phone"
              />
              <div
                class=""
              >
                <small
                  class="text-red-600"
                />
              </div>
            </div>
            <div
              class="flex flex-col items-start justify-start"
            >
              <label
                class="mb-2 font-semibold"
                for="github-username"
              >
                Github Username
              </label>
              <input
                class="rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary focus:z-10 sm:text-sm  dark:text-dark-text-fill dark:border-white  dark:bg-dark-bg"
                id="github-username"
                name="githubUsername"
                placeholder="Your Github Username"
                type="text"
              />
              <div
                class=""
              >
                <small
                  class="text-red-600"
                />
              </div>
            </div>
            <div
              class="flex flex-col items-start justify-start mt-auto"
            >
              <label
                class="mb-2 font-semibold"
                for="Country"
              >
                Country
              </label>
              <div
                class="w-full"
              >
                <div
                  data-testid="countries"
                >
                  <div
                    class="relative"
                  >
                    <button
                      aria-expanded="true"
                      aria-haspopup="listbox"
                      aria-labelledby="listbox-label"
                      class="bg-white  dark:bg-dark-bg relative w-full border border-gray-300  rounded-md shadow-sm pl-2 pr-1 py-2 text-left cursor-default focus:outline-none focus:ring-1  focus:ring-primary focus:border-primary focus:z-10 sm:text-sm  dark:text-dark-text-fill dark:border-white  darksm:text-sm"
                      data-testid="country-selector-button"
                      type="button"
                    >
                      <span
                        class="truncate flex items-center"
                        data-testid="country-selector-title"
                      >
                        <img
                          alt="AD"
                          class="inline mr-2 h-4 rounded-sm"
                          data-testid="country-selector-flag"
                          src="https://purecatamphetamine.github.io/country-flag-icons/3x2/AD.svg"
                        />
                        Andorra
                      </span>
                      <span
                        class="absolute inset-y-0 right-0 flex items-center pr-2 pointer-events-none"
                      >
                        <svg
                          aria-hidden="true"
                          class="h-5 w-5 text-gray-400 "
                          fill="currentColor"
                          viewBox="0 0 20 20"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M10 3a1 1 0 01.707.293l3 3a1 1 0 01-1.414 1.414L10 5.414 7.707 7.707a1 1 0 01-1.414-1.414l3-3A1 1 0 0110 3zm-3.707 9.293a1 1 0 011.414 0L10 14.586l2.293-2.293a1 1 0 011.414 1.414l-3 3a1 1 0 01-1.414 0l-3-3a1 1 0 010-1.414z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex flex-col items-start justify-start md:col-span-2"
            >
              <label
                class="mb-2 font-semibold"
                for="Biography"
              >
                Biography
              </label>
              <textarea
                class="w-full p-2 border rounded-md dark:bg-dark-bg focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary focus:z-10 sm:text-sm dark:text-dark-text-fill dark:border-white"
                cols="20"
                id=""
                name="biography"
                placeholder="Add your biography here"
                rows="5"
              />
            </div>
            <button
              class="group md:px-4 relative my-4 md:w-fit sm:w-full flex flex-row justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-primary hover:bg-[#1280a3] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary dark:focus:ring-secondary sm:mx-0"
              type="submit"
            >
              Update Profile
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Profile Page Renders the others role profile tabs 1`] = `
<div
  className="flex flex-wrap"
>
  <div
    className="lg:w-[40vw]"
  >
    <ul
      className="flex flex-row flex-wrap pt-3 pb-4 mb-0 text-black list-none dark:text-dark-text-fill"
      role="tablist"
    >
      <li
        className="flex-auto mr-2 -mb-px text-center last:mr-0"
      >
        <a
          className="text-xs font-bold uppercase px-3 md:px-5 py-3 shadow-sm rounded block leading-normal bg-white dark:bg-dark-bg border-b-4 border-b-primary "
          data-testid="tab-link"
          data-toggle="tab"
          href="#link1"
          onClick={[Function]}
          role="tablist"
        >
          About
        </a>
      </li>
      <li
        className="flex-auto mr-2 -mb-px text-center last:mr-0"
      >
        <a
          className="text-xs font-bold uppercase px-3 md:px-5 py-3 shadow-sm rounded block leading-normal "
          data-testid="tab-link"
          data-toggle="tab"
          href="#link1"
          onClick={[Function]}
          role="tablist"
        >
          Organizations
        </a>
      </li>
    </ul>
  </div>
  <div
    className="relative flex flex-col w-full min-w-0 break-words rounded text-light-text dark:text-dark-text-fill"
  >
    <div
      className="flex-auto py-2"
    >
      <div
        className="tab-content tab-space"
      >
        <div
          className="block"
          id="link1"
        >
          <div
            className="grid gap-4 md:grid-cols-6 md:gap-6 "
          >
            <div
              className="flex flex-col items-start justify-start px-4 py-2 bg-indigo-100 shadow md:col-span-3 dark:bg-dark-bg w-100"
            >
              <h2
                className="my-2 text-xl font-bold"
              >
                Fabrice
                 
              </h2>
              <div
                className="flex justify-center py-4"
              >
                <svg
                  aria-hidden="true"
                  className="w-6 mr-2 dark:text-dark-text-fill"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"
                  />
                  <path
                    d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"
                  />
                </svg>
                unavailable
              </div>
              <div
                className="flex"
              >
                <svg
                  aria-hidden="true"
                  className="w-6 mr-2 dark:text-dark-text-fill"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"
                  />
                </svg>
                unavailable
              </div>
              <div
                className="flex py-4 "
              >
                <svg
                  aria-hidden="true"
                  className="w-6 mr-2 dark:text-dark-text-fill"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z"
                  />
                </svg>
              </div>
              <div
                className="flex py-4 "
              >
                <svg
                  className="w-6 mr-2 dark:text-dark-text-fill"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 496 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
                  />
                </svg>
              </div>
              <div
                className="flex py-4"
              >
                <p>
                  No Resume uploaded yet
                </p>
              </div>
            </div>
            <div
              className="px-4 py-2 bg-indigo-100 shadow md:col-span-3 dark:bg-dark-bg"
            >
              <h2
                className="my-2 text-xl font-bold"
              >
                Biography
              </h2>
              <p
                className="pt-4"
              >
                No biography
              </p>
            </div>
          </div>
          <div
            className="text-sm font-sans hidden"
            style={
              Object {
                "display": "flex",
                "gap": "50px",
                "justifyContent": "space-between",
                "marginBottom": "20px",
                "paddingBlock": "10px",
              }
            }
          >
            <div
              className="flex justify-center items-center h-48 hidden"
            >
              <i>
                Loading gitHub statistics...
              </i>
              <div
                className="flex items-center justify-center  h-5 opacity-90"
              >
                <div
                  role="status"
                >
                  <svg
                    className="mr-1 ml-1 inline h-5 w-5 animate-spin fill-gray-300 text-gray-100 dark:text-gray-600"
                    fill="none"
                    viewBox="0 0 100 101"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
                      fill="currentColor"
                    />
                    <path
                      d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z"
                      fill="currentFill"
                    />
                  </svg>
                  <span
                    className="sr-only"
                  >
                    Loading...
                  </span>
                </div>
              </div>
              <div
                className="spinner"
              />
            </div>
          </div>
          <div
            className="grid md:grid-cols-5 gap-4 md:gap-6 hidden"
          >
            <div
              className="flex flex-col items-start justify-start p-2 bg-white shadow md:col-span-2 dark:bg-dark-bg "
            >
              <h3
                className="m-2 mb-4 text-2xl font-bold"
              >
                Github Organisation
              </h3>
              <div
                className="flex items-center gap-10"
              >
                <div
                  className="flex justify-center py-4"
                >
                  <svg
                    className="w-6 mr-2 dark:text-dark-text-fill"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 448 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zM277.3 415.7c-8.4 1.5-11.5-3.7-11.5-8 0-5.4.2-33 .2-55.3 0-15.6-5.2-25.5-11.3-30.7 37-4.1 76-9.2 76-73.1 0-18.2-6.5-27.3-17.1-39 1.7-4.3 7.4-22-1.7-45-13.9-4.3-45.7 17.9-45.7 17.9-13.2-3.7-27.5-5.6-41.6-5.6-14.1 0-28.4 1.9-41.6 5.6 0 0-31.8-22.2-45.7-17.9-9.1 22.9-3.5 40.6-1.7 45-10.6 11.7-15.6 20.8-15.6 39 0 63.6 37.3 69 74.3 73.1-4.8 4.3-9.1 11.7-10.6 22.3-9.5 4.3-33.8 11.7-48.3-13.9-9.1-15.8-25.5-17.1-25.5-17.1-16.2-.2-1.1 10.2-1.1 10.2 10.8 5 18.4 24.2 18.4 24.2 9.7 29.7 56.1 19.7 56.1 19.7 0 13.9.2 36.5.2 40.6 0 4.3-3 9.5-11.5 8-66-22.1-112.2-84.9-112.2-158.3 0-91.8 70.2-161.5 162-161.5S388 165.6 388 257.4c.1 73.4-44.7 136.3-110.7 158.3zm-98.1-61.1c-1.9.4-3.7-.4-3.9-1.7-.2-1.5 1.1-2.8 3-3.2 1.9-.2 3.7.6 3.9 1.9.3 1.3-1 2.6-3 3zm-9.5-.9c0 1.3-1.5 2.4-3.5 2.4-2.2.2-3.7-.9-3.7-2.4 0-1.3 1.5-2.4 3.5-2.4 1.9-.2 3.7.9 3.7 2.4zm-13.7-1.1c-.4 1.3-2.4 1.9-4.1 1.3-1.9-.4-3.2-1.9-2.8-3.2.4-1.3 2.4-1.9 4.1-1.5 2 .6 3.3 2.1 2.8 3.4zm-12.3-5.4c-.9 1.1-2.8.9-4.3-.6-1.5-1.3-1.9-3.2-.9-4.1.9-1.1 2.8-.9 4.3.6 1.3 1.3 1.8 3.3.9 4.1zm-9.1-9.1c-.9.6-2.6 0-3.7-1.5s-1.1-3.2 0-3.9c1.1-.9 2.8-.2 3.7 1.3 1.1 1.5 1.1 3.3 0 4.1zm-6.5-9.7c-.9.9-2.4.4-3.5-.6-1.1-1.3-1.3-2.8-.4-3.5.9-.9 2.4-.4 3.5.6 1.1 1.3 1.3 2.8.4 3.5zm-6.7-7.4c-.4.9-1.7 1.1-2.8.4-1.3-.6-1.9-1.7-1.5-2.6.4-.6 1.5-.9 2.8-.4 1.3.7 1.9 1.8 1.5 2.6z"
                    />
                  </svg>
                </div>
                <svg
                  className="w-6 mr-2 dark:text-dark-text-fill"
                  fill="currentColor"
                  height="1em"
                  onClick={[Function]}
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 576 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
                  />
                </svg>
              </div>
            </div>
            <div
              className="p-2 bg-white shadow md:col-span-3 dark:bg-dark-bg "
            >
              <div
                className="flex justify-between"
              >
                <h2
                  className="m-2 mb-4 text-xl font-bold"
                >
                  Repository
                </h2>
                <button
                  className="btn default md group relative md:w-1/3 sm:w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-primary hover:bg-[#1280a3] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary dark:focus:ring-secondary sm:mx-0"
                  data-testid="change_password"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Add New
                </button>
              </div>
              <div />
            </div>
          </div>
        </div>
        <div
          className="hidden"
          id="link3"
        >
          <div
            className="relative p-2 m-1 -ml-2 -mr-2"
          >
            <div
              className="flex items-start justify-start p-1 shadow bg-primary md:col-span-2 rounded-t-2xl"
            >
              <img
                alt="logo"
                className="absolute w-12 h-12 mt-6 ml-8 bg-white border rounded-full cursor-pointer md:w-16 md:h-16 dark:bg-dark-bg border-primary"
                src={Object {}}
              />
              <div
                className="flex flex-col items-start justify-start ml-36"
              >
                <h2
                  className="text-lg font-bold text-center text-dark-text-fill md:text-xl"
                >
                  Unavailabe
                </h2>
                <h3
                  className="text-sm font-bold text-center text-dark-text-fill md:text-lg "
                >
                  https://andela.pusle.com
                </h3>
              </div>
            </div>
            <div
              className="flex flex-row"
            >
              <div
                className="flex flex-col items-start justify-start w-full p-4 m-2 mt-6 bg-indigo-100 shadow dark:bg-dark-bg "
              >
                <h3
                  className="mb-4 text-2xl font-bold"
                >
                  You in the organization
                </h3>
                <div
                  className="flex pb-2"
                >
                  <h4
                    className="mr-4 text-base font-bold"
                  >
                    Role
                    :
                  </h4>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="hidden"
          id="link2"
        >
          <div
            className="bg-light-bg dark:bg-dark-frame-bg lg:px-8"
          >
            <div
              className="border bg-indigo-100 dark:border-dark-bg dark:bg-dark-bg dark:text-white w-[90vw] md:w-[92vw] lg:w-[75%] h-[56vh] md:h-[52vh] lg:h-[52vh] mx-0 mr-24 md:mr-0 md:mx-4 mb-6 lg:-ml-8 rounded-lg"
            >
              <div
                className="px-4"
              >
                <form
                  className="grid grid-cols-1 gap-4 mt-12"
                  onSubmit={[Function]}
                >
                  <div
                    className="flex flex-col items-start justify-start"
                  >
                    <label
                      className="mb-2 font-semibold"
                      htmlFor="current-password"
                    >
                      Current Password
                    </label>
                    <input
                      className="rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary focus:z-10 sm:text-sm  dark:text-dark-text-fill dark:border-white  dark:bg-dark-bg"
                      id="current-password"
                      name="current-password"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Enter your current password"
                      type="passsword"
                    />
                    <div
                      className=""
                    >
                      <small
                        className="text-red-600"
                      />
                    </div>
                  </div>
                  <div
                    className="flex flex-col items-start justify-start"
                  >
                    <label
                      className="mb-2 font-semibold"
                      htmlFor="new-password"
                    >
                      New Password
                    </label>
                    <input
                      className="rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary focus:z-10 sm:text-sm  dark:text-dark-text-fill dark:border-white  dark:bg-dark-bg"
                      id="new-password"
                      name="new-password"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Enter new password"
                      type="password"
                    />
                    <div
                      className=""
                    >
                      <small
                        className="text-red-600"
                      />
                    </div>
                  </div>
                  <div
                    className="flex flex-col items-start justify-start"
                  >
                    <label
                      className="mb-2 font-semibold"
                      htmlFor="confirm-password"
                    >
                      Confirm Password
                    </label>
                    <input
                      className="rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary focus:z-10 sm:text-sm  dark:text-dark-text-fill dark:border-white  dark:bg-dark-bg"
                      id="confirm-password"
                      name="confirm-password"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Re-enter the new password"
                      type="password"
                    />
                    <div
                      className=""
                    >
                      <small
                        className="text-red-600"
                      />
                    </div>
                  </div>
                  <button
                    className="btn default md group relative md:w-2/3 sm:w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-primary hover:bg-violet-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary dark:focus:ring-secondary sm:mx-0"
                    data-testid="change_password"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    Change Password
                  </button>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <div
    className="h-screen w-screen z-20 bg-black bg-opacity-30 backdrop-blur-sm absolute flex items-center justify-center px-4 top-0 left-0 bottom-0 hidden"
  >
    <div
      className="w-full p-4 pb-8 bg-white rounded-lg dark:bg-dark-bg sm:w-3/4 xl:w-4/12"
    >
      <div
        className="flex flex-wrap items-center justify-center w-full card-title "
      >
        <h3
          className="w-11/12 text-sm font-bold text-center dark:text-white "
        >
          Remove Repo
        </h3>
        <hr
          className="w-full my-3 border-b bg-primary"
        />
      </div>
      <div
        className="card-body"
      >
        <form
          className="px-8 py-3 "
        >
          <div
            className="flex flex-wrap items-center justify-center w-full card-title "
          >
            <h3
              className="w-11/12 text-sm font-bold text-center dark:text-white "
            >
              Are you sure you want to delete this repository,
            </h3>
          </div>
          <div
            className="flex justify-between w-full"
          >
            <button
              className="btn info sm w-[30%] md:w-1/4 text-sm font-sans"
              data-testid="removeModel2"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Cancel
            </button>
            <button
              className="btn primary sm w-[30%] md:w-1/4 text-sm font-sans"
              data-testid="removeMemberFromCohort"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Proceed
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
  <div
    className="h-screen w-screen z-20 bg-black bg-opacity-30 backdrop-blur-sm absolute flex items-center justify-center px-4 top-0 left-0 bottom-0 hidden"
  >
    <div
      className="w-full p-4 pb-8 bg-white rounded-lg dark:bg-dark-bg sm:w-3/4 xl:w-4/12"
    >
      <div
        className="flex flex-wrap items-center justify-center w-full card-title "
      >
        <h3
          className="w-11/12 text-sm font-bold text-center dark:text-white "
        >
          Add New Repository
        </h3>
        <hr
          className="w-full my-3 border-b bg-primary"
        />
      </div>
      <div
        className="card-body"
      >
        <form
          className="px-8 py-3 "
        >
          <div
            className="flex flex-wrap items-center justify-center w-full card-title "
          >
            <h3
              className="w-11/12 text-sm font-bold text-center dark:text-white "
            >
              Fill in the repository name
            </h3>
          </div>
          <div
            className="my-3 text-white input h-9 "
          >
            <div
              className="flex items-center w-full h-full text-white rounded-md grouped-input"
            >
              <input
                className="w-full px-5 py-2 font-sans text-xs text-black border rounded outline-none dark:bg-dark-tertiary border-primary"
                name="email"
                onChange={[Function]}
                placeholder="enter repository name"
                type="email"
                value=""
              />
            </div>
          </div>
          <div
            className="flex justify-between w-full"
          >
            <button
              className="btn info sm w-[30%] md:w-1/4 text-sm font-sans"
              data-testid="removeInviteModel"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Cancel
            </button>
            <button
              className="btn primary sm w-[30%] md:w-1/4 text-sm font-sans"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Add
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
  <div
    className="h-screen w-screen z-20 bg-black bg-opacity-30 backdrop-blur-sm absolute flex items-center justify-center px-4 top-0 left-0 bottom-0 hidden"
  >
    <div
      className="w-full p-4 pb-8 bg-white rounded-lg dark:bg-dark-bg sm:w-3/4 xl:w-4/12"
    >
      <div
        className="flex flex-wrap items-center justify-center w-full card-title "
      >
        <h3
          className="w-11/12 text-sm font-bold text-center dark:text-white "
        >
          Add Edit Organisation
        </h3>
        <hr
          className="w-full my-3 border-b bg-primary"
        />
      </div>
      <div
        className="card-body"
      >
        <form
          className="px-8 py-3 "
        >
          <div
            className="flex flex-wrap items-center justify-center w-full card-title "
          >
            <h3
              className="w-11/12 text-sm font-bold text-center dark:text-white "
            >
              Fill in the organisation name
            </h3>
          </div>
          <div
            className="my-3 text-white input h-9 "
          >
            <div
              className="flex items-center w-full h-full text-white rounded-md grouped-input"
            >
              <input
                className="w-full px-5 py-2 font-sans text-xs text-black border rounded outline-none dark:bg-dark-tertiary border-primary"
                name="email"
                onChange={[Function]}
                placeholder="enter organisation name"
                type="email"
                value=""
              />
            </div>
          </div>
          <div
            className="flex justify-between w-full"
          >
            <button
              className="btn info sm w-[30%] md:w-1/4 text-sm font-sans"
              data-testid="removeInviteModel"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Cancel
            </button>
            <button
              className="btn primary sm w-[30%] md:w-1/4 text-sm font-sans"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Edit
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Profile Page Renders the superAdmin profile tabs 1`] = `
<div
  className="flex flex-wrap"
>
  <div
    className="lg:w-[40vw]"
  >
    <ul
      className="flex flex-row flex-wrap pt-3 pb-4 mb-0 text-black list-none dark:text-dark-text-fill"
      role="tablist"
    >
      <li
        className="flex-auto mr-2 -mb-px text-center last:mr-0"
      >
        <a
          className="text-xs font-bold uppercase px-3 md:px-5 py-3 shadow-sm rounded block leading-normal bg-white dark:bg-dark-bg border-b-4 border-b-primary "
          data-testid="tab-link"
          data-toggle="tab"
          href="#link1"
          onClick={[Function]}
          role="tablist"
        >
          About
        </a>
      </li>
    </ul>
  </div>
  <div
    className="relative flex flex-col w-full min-w-0 break-words rounded text-light-text dark:text-dark-text-fill"
  >
    <div
      className="flex-auto py-2"
    >
      <div
        className="tab-content tab-space"
      >
        <div
          className="block"
          id="link1"
        >
          <div
            className="grid gap-4 md:grid-cols-6 md:gap-6 "
          >
            <div
              className="flex flex-col items-start justify-start px-4 py-2 bg-indigo-100 shadow md:col-span-3 dark:bg-dark-bg w-100"
            >
              <h2
                className="my-2 text-xl font-bold"
              >
                Fabrice
                 
              </h2>
              <div
                className="flex justify-center py-4"
              >
                <svg
                  aria-hidden="true"
                  className="w-6 mr-2 dark:text-dark-text-fill"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"
                  />
                  <path
                    d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"
                  />
                </svg>
                unavailable
              </div>
              <div
                className="flex"
              >
                <svg
                  aria-hidden="true"
                  className="w-6 mr-2 dark:text-dark-text-fill"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.773a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"
                  />
                </svg>
                unavailable
              </div>
              <div
                className="flex py-4 "
              >
                <svg
                  aria-hidden="true"
                  className="w-6 mr-2 dark:text-dark-text-fill"
                  fill="currentColor"
                  viewBox="0 0 20 20"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z"
                  />
                </svg>
              </div>
              <div
                className="flex py-4 "
              >
                <svg
                  className="w-6 mr-2 dark:text-dark-text-fill"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 496 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"
                  />
                </svg>
              </div>
              <div
                className="flex py-4"
              >
                <p>
                  No Resume uploaded yet
                </p>
              </div>
            </div>
            <div
              className="px-4 py-2 bg-indigo-100 shadow md:col-span-3 dark:bg-dark-bg"
            >
              <h2
                className="my-2 text-xl font-bold"
              >
                Biography
              </h2>
              <p
                className="pt-4"
              >
                No biography
              </p>
            </div>
          </div>
          <div
            className="text-sm font-sans hidden"
            style={
              Object {
                "display": "flex",
                "gap": "50px",
                "justifyContent": "space-between",
                "marginBottom": "20px",
                "paddingBlock": "10px",
              }
            }
          >
            <div
              className="flex justify-center items-center h-48 hidden"
            >
              <i>
                Loading gitHub statistics...
              </i>
              <div
                className="flex items-center justify-center  h-5 opacity-90"
              >
                <div
                  role="status"
                >
                  <svg
                    className="mr-1 ml-1 inline h-5 w-5 animate-spin fill-gray-300 text-gray-100 dark:text-gray-600"
                    fill="none"
                    viewBox="0 0 100 101"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
                      fill="currentColor"
                    />
                    <path
                      d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z"
                      fill="currentFill"
                    />
                  </svg>
                  <span
                    className="sr-only"
                  >
                    Loading...
                  </span>
                </div>
              </div>
              <div
                className="spinner"
              />
            </div>
          </div>
          <div
            className="grid md:grid-cols-5 gap-4 md:gap-6 hidden"
          >
            <div
              className="flex flex-col items-start justify-start p-2 bg-white shadow md:col-span-2 dark:bg-dark-bg "
            >
              <h3
                className="m-2 mb-4 text-2xl font-bold"
              >
                Github Organisation
              </h3>
              <div
                className="flex items-center gap-10"
              >
                <div
                  className="flex justify-center py-4"
                >
                  <svg
                    className="w-6 mr-2 dark:text-dark-text-fill"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 448 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M400 32H48C21.5 32 0 53.5 0 80v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V80c0-26.5-21.5-48-48-48zM277.3 415.7c-8.4 1.5-11.5-3.7-11.5-8 0-5.4.2-33 .2-55.3 0-15.6-5.2-25.5-11.3-30.7 37-4.1 76-9.2 76-73.1 0-18.2-6.5-27.3-17.1-39 1.7-4.3 7.4-22-1.7-45-13.9-4.3-45.7 17.9-45.7 17.9-13.2-3.7-27.5-5.6-41.6-5.6-14.1 0-28.4 1.9-41.6 5.6 0 0-31.8-22.2-45.7-17.9-9.1 22.9-3.5 40.6-1.7 45-10.6 11.7-15.6 20.8-15.6 39 0 63.6 37.3 69 74.3 73.1-4.8 4.3-9.1 11.7-10.6 22.3-9.5 4.3-33.8 11.7-48.3-13.9-9.1-15.8-25.5-17.1-25.5-17.1-16.2-.2-1.1 10.2-1.1 10.2 10.8 5 18.4 24.2 18.4 24.2 9.7 29.7 56.1 19.7 56.1 19.7 0 13.9.2 36.5.2 40.6 0 4.3-3 9.5-11.5 8-66-22.1-112.2-84.9-112.2-158.3 0-91.8 70.2-161.5 162-161.5S388 165.6 388 257.4c.1 73.4-44.7 136.3-110.7 158.3zm-98.1-61.1c-1.9.4-3.7-.4-3.9-1.7-.2-1.5 1.1-2.8 3-3.2 1.9-.2 3.7.6 3.9 1.9.3 1.3-1 2.6-3 3zm-9.5-.9c0 1.3-1.5 2.4-3.5 2.4-2.2.2-3.7-.9-3.7-2.4 0-1.3 1.5-2.4 3.5-2.4 1.9-.2 3.7.9 3.7 2.4zm-13.7-1.1c-.4 1.3-2.4 1.9-4.1 1.3-1.9-.4-3.2-1.9-2.8-3.2.4-1.3 2.4-1.9 4.1-1.5 2 .6 3.3 2.1 2.8 3.4zm-12.3-5.4c-.9 1.1-2.8.9-4.3-.6-1.5-1.3-1.9-3.2-.9-4.1.9-1.1 2.8-.9 4.3.6 1.3 1.3 1.8 3.3.9 4.1zm-9.1-9.1c-.9.6-2.6 0-3.7-1.5s-1.1-3.2 0-3.9c1.1-.9 2.8-.2 3.7 1.3 1.1 1.5 1.1 3.3 0 4.1zm-6.5-9.7c-.9.9-2.4.4-3.5-.6-1.1-1.3-1.3-2.8-.4-3.5.9-.9 2.4-.4 3.5.6 1.1 1.3 1.3 2.8.4 3.5zm-6.7-7.4c-.4.9-1.7 1.1-2.8.4-1.3-.6-1.9-1.7-1.5-2.6.4-.6 1.5-.9 2.8-.4 1.3.7 1.9 1.8 1.5 2.6z"
                    />
                  </svg>
                </div>
                <svg
                  className="w-6 mr-2 dark:text-dark-text-fill"
                  fill="currentColor"
                  height="1em"
                  onClick={[Function]}
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 576 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M402.6 83.2l90.2 90.2c3.8 3.8 3.8 10 0 13.8L274.4 405.6l-92.8 10.3c-12.4 1.4-22.9-9.1-21.5-21.5l10.3-92.8L388.8 83.2c3.8-3.8 10-3.8 13.8 0zm162-22.9l-48.8-48.8c-15.2-15.2-39.9-15.2-55.2 0l-35.4 35.4c-3.8 3.8-3.8 10 0 13.8l90.2 90.2c3.8 3.8 10 3.8 13.8 0l35.4-35.4c15.2-15.3 15.2-40 0-55.2zM384 346.2V448H64V128h229.8c3.2 0 6.2-1.3 8.5-3.5l40-40c7.6-7.6 2.2-20.5-8.5-20.5H48C21.5 64 0 85.5 0 112v352c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V306.2c0-10.7-12.9-16-20.5-8.5l-40 40c-2.2 2.3-3.5 5.3-3.5 8.5z"
                  />
                </svg>
              </div>
            </div>
            <div
              className="p-2 bg-white shadow md:col-span-3 dark:bg-dark-bg "
            >
              <div
                className="flex justify-between"
              >
                <h2
                  className="m-2 mb-4 text-xl font-bold"
                >
                  Repository
                </h2>
                <button
                  className="btn default md group relative md:w-1/3 sm:w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-primary hover:bg-[#1280a3] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary dark:focus:ring-secondary sm:mx-0"
                  data-testid="change_password"
                  disabled={false}
                  onClick={[Function]}
                  type="button"
                >
                  Add New
                </button>
              </div>
              <div />
            </div>
          </div>
        </div>
        <div
          className="hidden"
          id="link3"
        >
          <div
            className="relative p-2 m-1 -ml-2 -mr-2"
          >
            <div
              className="flex items-start justify-start p-1 shadow bg-primary md:col-span-2 rounded-t-2xl"
            >
              <img
                alt="logo"
                className="absolute w-12 h-12 mt-6 ml-8 bg-white border rounded-full cursor-pointer md:w-16 md:h-16 dark:bg-dark-bg border-primary"
                src={Object {}}
              />
              <div
                className="flex flex-col items-start justify-start ml-36"
              >
                <h2
                  className="text-lg font-bold text-center text-dark-text-fill md:text-xl"
                >
                  Andela
                </h2>
                <h3
                  className="text-sm font-bold text-center text-dark-text-fill md:text-lg "
                >
                  https://andela.pusle.com
                </h3>
              </div>
            </div>
            <div
              className="flex flex-row"
            >
              <div
                className="flex flex-col items-start justify-start w-full p-4 m-2 mt-6 bg-indigo-100 shadow dark:bg-dark-bg "
              >
                <h3
                  className="mb-4 text-2xl font-bold"
                >
                  You in the organization
                </h3>
                <div
                  className="flex pb-2"
                >
                  <h4
                    className="mr-4 text-base font-bold"
                  >
                    Role
                    :
                  </h4>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="hidden"
          id="link2"
        >
          <div
            className="bg-light-bg dark:bg-dark-frame-bg lg:px-8"
          >
            <div
              className="border bg-indigo-100 dark:border-dark-bg dark:bg-dark-bg dark:text-white w-[90vw] md:w-[92vw] lg:w-[75%] h-[56vh] md:h-[52vh] lg:h-[52vh] mx-0 mr-24 md:mr-0 md:mx-4 mb-6 lg:-ml-8 rounded-lg"
            >
              <div
                className="px-4"
              >
                <form
                  className="grid grid-cols-1 gap-4 mt-12"
                  onSubmit={[Function]}
                >
                  <div
                    className="flex flex-col items-start justify-start"
                  >
                    <label
                      className="mb-2 font-semibold"
                      htmlFor="current-password"
                    >
                      Current Password
                    </label>
                    <input
                      className="rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary focus:z-10 sm:text-sm  dark:text-dark-text-fill dark:border-white  dark:bg-dark-bg"
                      id="current-password"
                      name="current-password"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Enter your current password"
                      type="passsword"
                    />
                    <div
                      className=""
                    >
                      <small
                        className="text-red-600"
                      />
                    </div>
                  </div>
                  <div
                    className="flex flex-col items-start justify-start"
                  >
                    <label
                      className="mb-2 font-semibold"
                      htmlFor="new-password"
                    >
                      New Password
                    </label>
                    <input
                      className="rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary focus:z-10 sm:text-sm  dark:text-dark-text-fill dark:border-white  dark:bg-dark-bg"
                      id="new-password"
                      name="new-password"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Enter new password"
                      type="password"
                    />
                    <div
                      className=""
                    >
                      <small
                        className="text-red-600"
                      />
                    </div>
                  </div>
                  <div
                    className="flex flex-col items-start justify-start"
                  >
                    <label
                      className="mb-2 font-semibold"
                      htmlFor="confirm-password"
                    >
                      Confirm Password
                    </label>
                    <input
                      className="rounded-md appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-1 focus:ring-primary focus:border-primary focus:z-10 sm:text-sm  dark:text-dark-text-fill dark:border-white  dark:bg-dark-bg"
                      id="confirm-password"
                      name="confirm-password"
                      onBlur={[Function]}
                      onChange={[Function]}
                      placeholder="Re-enter the new password"
                      type="password"
                    />
                    <div
                      className=""
                    >
                      <small
                        className="text-red-600"
                      />
                    </div>
                  </div>
                  <button
                    className="btn default md group relative md:w-2/3 sm:w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-primary hover:bg-violet-600 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary dark:focus:ring-secondary sm:mx-0"
                    data-testid="change_password"
                    disabled={false}
                    onClick={[Function]}
                    type="button"
                  >
                    Change Password
                  </button>
                </form>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <div
    className="h-screen w-screen z-20 bg-black bg-opacity-30 backdrop-blur-sm absolute flex items-center justify-center px-4 top-0 left-0 bottom-0 hidden"
  >
    <div
      className="w-full p-4 pb-8 bg-white rounded-lg dark:bg-dark-bg sm:w-3/4 xl:w-4/12"
    >
      <div
        className="flex flex-wrap items-center justify-center w-full card-title "
      >
        <h3
          className="w-11/12 text-sm font-bold text-center dark:text-white "
        >
          Remove Repo
        </h3>
        <hr
          className="w-full my-3 border-b bg-primary"
        />
      </div>
      <div
        className="card-body"
      >
        <form
          className="px-8 py-3 "
        >
          <div
            className="flex flex-wrap items-center justify-center w-full card-title "
          >
            <h3
              className="w-11/12 text-sm font-bold text-center dark:text-white "
            >
              Are you sure you want to delete this repository,
            </h3>
          </div>
          <div
            className="flex justify-between w-full"
          >
            <button
              className="btn info sm w-[30%] md:w-1/4 text-sm font-sans"
              data-testid="removeModel2"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Cancel
            </button>
            <button
              className="btn primary sm w-[30%] md:w-1/4 text-sm font-sans"
              data-testid="removeMemberFromCohort"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Proceed
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
  <div
    className="h-screen w-screen z-20 bg-black bg-opacity-30 backdrop-blur-sm absolute flex items-center justify-center px-4 top-0 left-0 bottom-0 hidden"
  >
    <div
      className="w-full p-4 pb-8 bg-white rounded-lg dark:bg-dark-bg sm:w-3/4 xl:w-4/12"
    >
      <div
        className="flex flex-wrap items-center justify-center w-full card-title "
      >
        <h3
          className="w-11/12 text-sm font-bold text-center dark:text-white "
        >
          Add New Repository
        </h3>
        <hr
          className="w-full my-3 border-b bg-primary"
        />
      </div>
      <div
        className="card-body"
      >
        <form
          className="px-8 py-3 "
        >
          <div
            className="flex flex-wrap items-center justify-center w-full card-title "
          >
            <h3
              className="w-11/12 text-sm font-bold text-center dark:text-white "
            >
              Fill in the repository name
            </h3>
          </div>
          <div
            className="my-3 text-white input h-9 "
          >
            <div
              className="flex items-center w-full h-full text-white rounded-md grouped-input"
            >
              <input
                className="w-full px-5 py-2 font-sans text-xs text-black border rounded outline-none dark:bg-dark-tertiary border-primary"
                name="email"
                onChange={[Function]}
                placeholder="enter repository name"
                type="email"
                value=""
              />
            </div>
          </div>
          <div
            className="flex justify-between w-full"
          >
            <button
              className="btn info sm w-[30%] md:w-1/4 text-sm font-sans"
              data-testid="removeInviteModel"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Cancel
            </button>
            <button
              className="btn primary sm w-[30%] md:w-1/4 text-sm font-sans"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Add
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
  <div
    className="h-screen w-screen z-20 bg-black bg-opacity-30 backdrop-blur-sm absolute flex items-center justify-center px-4 top-0 left-0 bottom-0 hidden"
  >
    <div
      className="w-full p-4 pb-8 bg-white rounded-lg dark:bg-dark-bg sm:w-3/4 xl:w-4/12"
    >
      <div
        className="flex flex-wrap items-center justify-center w-full card-title "
      >
        <h3
          className="w-11/12 text-sm font-bold text-center dark:text-white "
        >
          Add Edit Organisation
        </h3>
        <hr
          className="w-full my-3 border-b bg-primary"
        />
      </div>
      <div
        className="card-body"
      >
        <form
          className="px-8 py-3 "
        >
          <div
            className="flex flex-wrap items-center justify-center w-full card-title "
          >
            <h3
              className="w-11/12 text-sm font-bold text-center dark:text-white "
            >
              Fill in the organisation name
            </h3>
          </div>
          <div
            className="my-3 text-white input h-9 "
          >
            <div
              className="flex items-center w-full h-full text-white rounded-md grouped-input"
            >
              <input
                className="w-full px-5 py-2 font-sans text-xs text-black border rounded outline-none dark:bg-dark-tertiary border-primary"
                name="email"
                onChange={[Function]}
                placeholder="enter organisation name"
                type="email"
                value=""
              />
            </div>
          </div>
          <div
            className="flex justify-between w-full"
          >
            <button
              className="btn info sm w-[30%] md:w-1/4 text-sm font-sans"
              data-testid="removeInviteModel"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Cancel
            </button>
            <button
              className="btn primary sm w-[30%] md:w-1/4 text-sm font-sans"
              disabled={false}
              onClick={[Function]}
              type="button"
            >
              Edit
            </button>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Profile Page Renders the whole profile page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="bg-light-bg dark:bg-dark-frame-bg overflow-y-scroll"
      >
        <div
          class="w-full overflow-hidden h-full grow flex flex-col"
        >
          <div
            class="flex flex-col grow bg-light-bg dark:bg-dark-frame-bg overflow-hidden px-4"
          >
            <div
              class="flex flex-row pb-8 justify-center"
            >
              <div
                class="w-[100%] "
              >
                <div
                  class="grid grid-cols-2 lg:grid-cols-4 gap-4"
                >
                  <div
                    class=" bg-gray-300 py-4 dark:bg-gray-600 h-24 md:h-28 mt-12 md:mt-20 lg:mt-8 text-center flex flex-col justify-center items-center rounded-lg animate-pulse"
                  />
                  <div
                    class=" bg-gray-300 py-4 dark:bg-gray-600 h-24 md:h-28 mt-12 md:mt-20 lg:mt-8 text-center flex flex-col justify-center items-center rounded-lg animate-pulse"
                  />
                  <div
                    class=" bg-gray-300 py-4 dark:bg-gray-600 h-24 md:h-28 mt-12 md:mt-20 lg:mt-8 text-center flex flex-col justify-center items-center rounded-lg animate-pulse"
                  />
                  <div
                    class=" bg-gray-300 py-4 dark:bg-gray-600 h-24 md:h-28 mt-12 md:mt-20 lg:mt-8 text-center flex flex-col justify-center items-center rounded-lg animate-pulse"
                  />
                </div>
              </div>
            </div>
            <div
              class="items-center "
            >
              <div
                class="w-[100%] h-[46vh] lg:h-[62vh] pb-14 mx-auto mt-8 bottom-0 bg-gray-300 dark:bg-gray-600 rounded-lg animate-pulse"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="bg-light-bg dark:bg-dark-frame-bg overflow-y-scroll"
    >
      <div
        class="w-full overflow-hidden h-full grow flex flex-col"
      >
        <div
          class="flex flex-col grow bg-light-bg dark:bg-dark-frame-bg overflow-hidden px-4"
        >
          <div
            class="flex flex-row pb-8 justify-center"
          >
            <div
              class="w-[100%] "
            >
              <div
                class="grid grid-cols-2 lg:grid-cols-4 gap-4"
              >
                <div
                  class=" bg-gray-300 py-4 dark:bg-gray-600 h-24 md:h-28 mt-12 md:mt-20 lg:mt-8 text-center flex flex-col justify-center items-center rounded-lg animate-pulse"
                />
                <div
                  class=" bg-gray-300 py-4 dark:bg-gray-600 h-24 md:h-28 mt-12 md:mt-20 lg:mt-8 text-center flex flex-col justify-center items-center rounded-lg animate-pulse"
                />
                <div
                  class=" bg-gray-300 py-4 dark:bg-gray-600 h-24 md:h-28 mt-12 md:mt-20 lg:mt-8 text-center flex flex-col justify-center items-center rounded-lg animate-pulse"
                />
                <div
                  class=" bg-gray-300 py-4 dark:bg-gray-600 h-24 md:h-28 mt-12 md:mt-20 lg:mt-8 text-center flex flex-col justify-center items-center rounded-lg animate-pulse"
                />
              </div>
            </div>
          </div>
          <div
            class="items-center "
          >
            <div
              class="w-[100%] h-[46vh] lg:h-[62vh] pb-14 mx-auto mt-8 bottom-0 bg-gray-300 dark:bg-gray-600 rounded-lg animate-pulse"
            />
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
